--- a/.github/workflows/profile-summary-cards.yml
+++ b/.github/workflows/profile-summary-cards.yml
@@ -21,3 +21,4 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.CARD_TOKEN }}
         with:
           USERNAME: ${{ github.repository_owner }}
+          UTC_OFFSET: 1
